// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiTabbedContent behavior when selected tab state isn't controlled by the owner, select the first tab by default 1`] = `
<div>
  <div
    class="euiTabs euiTabs--medium euiTabs--bottomBorder emotion-euiTabs-tabSizeStyles-size_m-bottomBorder"
    role="tablist"
  >
    <button
      aria-controls="generated-id"
      aria-selected="true"
      class="euiTab euiTab-isSelected emotion-euiTab-selected"
      id="es"
      role="tab"
      type="button"
    >
      <span
        class="euiTab__content"
      >
        Elasticsearch
      </span>
    </button>
    <button
      aria-controls="generated-id"
      aria-selected="false"
      class="euiTab kibanaTab emotion-euiTab"
      data-test-subj="kibanaTab"
      id="kibana"
      role="tab"
      type="button"
    >
      <span
        class="euiTab__prepend"
      >
        prepend
      </span>
      <span
        class="euiTab__content"
      >
        <strong>
          Kibana
        </strong>
      </span>
      <span
        class="euiTab__append"
      >
        append
      </span>
    </button>
  </div>
  <div
    aria-labelledby="es"
    id="generated-id"
    role="tabpanel"
  >
    <p>
      Elasticsearch content
    </p>
  </div>
</div>
`;

exports[`EuiTabbedContent behavior when uncontrolled, the selected tab should update if it receives new content 1`] = `
<EuiTabbedContent
  autoFocus="initial"
  tabs={
    Array [
      Object {
        "content": <p>
          Elasticsearch content
        </p>,
        "id": "es",
        "name": "Elasticsearch",
      },
      Object {
        "append": "append",
        "className": "kibanaTab",
        "content": <p>
          updated Kibana content
        </p>,
        "data-test-subj": "kibanaTab",
        "id": "kibana",
        "name": <strong>
          Kibana
        </strong>,
        "prepend": "prepend",
      },
    ]
  }
>
  <div>
    <EuiTabs
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <div
        css="unknown styles"
        onBlur={[Function]}
        onFocus={[Function]}
        role="tablist"
      >
        <Insertion
          cache={
            Object {
              "insert": [Function],
              "inserted": Object {
                "1cduqyw-euiTab-selected": true,
                "fv3x4g-euiTab": true,
                "jdrvl0-euiTabs-tabSizeStyles-size_m-bottomBorder": true,
                "zcjv1n-euiTabs-tabSizeStyles-size_s-bottomBorder": true,
              },
              "key": "css",
              "nonce": undefined,
              "registered": Object {},
              "sheet": StyleSheet {
                "_alreadyInsertedOrderInsensitiveRule": true,
                "_insertTag": [Function],
                "before": null,
                "container": <head>
                  <style
                    data-emotion="css"
                    data-s=""
                  >
                    
                    .emotion-euiTabs-tabSizeStyles-size_m-bottomBorder{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;max-inline-size:100%;overflow-x:auto;overflow-inline:auto;overflow-y:hidden;overflow-block:hidden;position:relative;-webkit-flex-shrink:0;-ms-flex-negative:0;flex-shrink:0;gap:16px;box-shadow:inset 0 calc(1px * -1) 0 #D3DAE6;}
                  </style>
                  <style
                    data-emotion="css"
                    data-s=""
                  >
                    
                    .emotion-euiTabs-tabSizeStyles-size_m-bottomBorder .euiTab{padding:0 4px;}
                  </style>
                  <style
                    data-emotion="css"
                    data-s=""
                  >
                    
                    .emotion-euiTabs-tabSizeStyles-size_m-bottomBorder .euiTab__content{font-size:1.0000rem;line-height:1.4286rem;font-weight:700;color:#1a1c21;line-height:40px;}
                  </style>
                  <style
                    data-emotion="css"
                    data-s=""
                  >
                    
                    .emotion-euiTab-selected{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;cursor:pointer;-webkit-flex-direction:row;-ms-flex-direction:row;flex-direction:row;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;font-weight:600;gap:8px;box-shadow:inset 0 calc(2px * -1) 0 #07C;}
                  </style>
                  <style
                    data-emotion="css"
                    data-s=""
                  >
                    
                    .emotion-euiTab-selected:focus{background-color:transparent;outline-offset:-2px;}
                  </style>
                  <style
                    data-emotion="css"
                    data-s=""
                  >
                    
                    .emotion-euiTab-selected .euiTab__content{color:#343741;}
                  </style>
                  <style
                    data-emotion="css"
                    data-s=""
                  >
                    
                    .emotion-euiTab-selected .euiTab__content:hover{-webkit-text-decoration:underline;text-decoration:underline;}
                  </style>
                  <style
                    data-emotion="css"
                    data-s=""
                  >
                    
                    .emotion-euiTab-selected .euiTab__content{color:#006bb8;}
                  </style>
                  <style
                    data-emotion="css"
                    data-s=""
                  >
                    
                    .emotion-euiTab{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;cursor:pointer;-webkit-flex-direction:row;-ms-flex-direction:row;flex-direction:row;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;font-weight:600;gap:8px;}
                  </style>
                  <style
                    data-emotion="css"
                    data-s=""
                  >
                    
                    .emotion-euiTab:focus{background-color:transparent;outline-offset:-2px;}
                  </style>
                  <style
                    data-emotion="css"
                    data-s=""
                  >
                    
                    .emotion-euiTab .euiTab__content{color:#343741;}
                  </style>
                  <style
                    data-emotion="css"
                    data-s=""
                  >
                    
                    .emotion-euiTab .euiTab__content:hover{-webkit-text-decoration:underline;text-decoration:underline;}
                  </style>
                  <style
                    data-emotion="css"
                    data-s=""
                  >
                    
                    .css-zcjv1n-euiTabs-tabSizeStyles-size_s-bottomBorder{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;max-inline-size:100%;overflow-x:auto;overflow-inline:auto;overflow-y:hidden;overflow-block:hidden;position:relative;-webkit-flex-shrink:0;-ms-flex-negative:0;flex-shrink:0;gap:12px;box-shadow:inset 0 calc(1px * -1) 0 #D3DAE6;}
                  </style>
                  <style
                    data-emotion="css"
                    data-s=""
                  >
                    
                    .css-zcjv1n-euiTabs-tabSizeStyles-size_s-bottomBorder .euiTab{padding:0 4px;}
                  </style>
                  <style
                    data-emotion="css"
                    data-s=""
                  >
                    
                    .css-zcjv1n-euiTabs-tabSizeStyles-size_s-bottomBorder .euiTab__content{font-size:0.8571rem;line-height:1.1429rem;font-weight:700;color:#1a1c21;line-height:32px;}
                  </style>
                </head>,
                "ctr": 15,
                "insertionPoint": undefined,
                "isSpeedy": false,
                "key": "css",
                "nonce": undefined,
                "prepend": undefined,
                "tags": Array [
                  <style
                    data-emotion="css"
                    data-s=""
                  >
                    
                    .emotion-euiTabs-tabSizeStyles-size_m-bottomBorder{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;max-inline-size:100%;overflow-x:auto;overflow-inline:auto;overflow-y:hidden;overflow-block:hidden;position:relative;-webkit-flex-shrink:0;-ms-flex-negative:0;flex-shrink:0;gap:16px;box-shadow:inset 0 calc(1px * -1) 0 #D3DAE6;}
                  </style>,
                  <style
                    data-emotion="css"
                    data-s=""
                  >
                    
                    .emotion-euiTabs-tabSizeStyles-size_m-bottomBorder .euiTab{padding:0 4px;}
                  </style>,
                  <style
                    data-emotion="css"
                    data-s=""
                  >
                    
                    .emotion-euiTabs-tabSizeStyles-size_m-bottomBorder .euiTab__content{font-size:1.0000rem;line-height:1.4286rem;font-weight:700;color:#1a1c21;line-height:40px;}
                  </style>,
                  <style
                    data-emotion="css"
                    data-s=""
                  >
                    
                    .emotion-euiTab-selected{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;cursor:pointer;-webkit-flex-direction:row;-ms-flex-direction:row;flex-direction:row;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;font-weight:600;gap:8px;box-shadow:inset 0 calc(2px * -1) 0 #07C;}
                  </style>,
                  <style
                    data-emotion="css"
                    data-s=""
                  >
                    
                    .emotion-euiTab-selected:focus{background-color:transparent;outline-offset:-2px;}
                  </style>,
                  <style
                    data-emotion="css"
                    data-s=""
                  >
                    
                    .emotion-euiTab-selected .euiTab__content{color:#343741;}
                  </style>,
                  <style
                    data-emotion="css"
                    data-s=""
                  >
                    
                    .emotion-euiTab-selected .euiTab__content:hover{-webkit-text-decoration:underline;text-decoration:underline;}
                  </style>,
                  <style
                    data-emotion="css"
                    data-s=""
                  >
                    
                    .emotion-euiTab-selected .euiTab__content{color:#006bb8;}
                  </style>,
                  <style
                    data-emotion="css"
                    data-s=""
                  >
                    
                    .emotion-euiTab{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;cursor:pointer;-webkit-flex-direction:row;-ms-flex-direction:row;flex-direction:row;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;font-weight:600;gap:8px;}
                  </style>,
                  <style
                    data-emotion="css"
                    data-s=""
                  >
                    
                    .emotion-euiTab:focus{background-color:transparent;outline-offset:-2px;}
                  </style>,
                  <style
                    data-emotion="css"
                    data-s=""
                  >
                    
                    .emotion-euiTab .euiTab__content{color:#343741;}
                  </style>,
                  <style
                    data-emotion="css"
                    data-s=""
                  >
                    
                    .emotion-euiTab .euiTab__content:hover{-webkit-text-decoration:underline;text-decoration:underline;}
                  </style>,
                  <style
                    data-emotion="css"
                    data-s=""
                  >
                    
                    .css-zcjv1n-euiTabs-tabSizeStyles-size_s-bottomBorder{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;max-inline-size:100%;overflow-x:auto;overflow-inline:auto;overflow-y:hidden;overflow-block:hidden;position:relative;-webkit-flex-shrink:0;-ms-flex-negative:0;flex-shrink:0;gap:12px;box-shadow:inset 0 calc(1px * -1) 0 #D3DAE6;}
                  </style>,
                  <style
                    data-emotion="css"
                    data-s=""
                  >
                    
                    .css-zcjv1n-euiTabs-tabSizeStyles-size_s-bottomBorder .euiTab{padding:0 4px;}
                  </style>,
                  <style
                    data-emotion="css"
                    data-s=""
                  >
                    
                    .css-zcjv1n-euiTabs-tabSizeStyles-size_s-bottomBorder .euiTab__content{font-size:0.8571rem;line-height:1.1429rem;font-weight:700;color:#1a1c21;line-height:32px;}
                  </style>,
                ],
              },
            }
          }
          isStringTag={true}
          serialized={
            Object {
              "map": undefined,
              "name": "jdrvl0-euiTabs-tabSizeStyles-size_m-bottomBorder",
              "next": undefined,
              "styles": "display:flex;max-inline-size: 100%;;
  overflow-x: auto;
  overflow-inline: auto;
;
  overflow-y: hidden;
  overflow-block: hidden;
;position:relative;flex-shrink:0;;label:euiTabs;;;gap:16px;.euiTab{padding: 0 4px;}.euiTab__content{font-size:1.0000rem;line-height:1.4286rem;font-weight:700;color:#1a1c21;;line-height: 40px;};label:tabSizeStyles;;;;label:size_m;;;box-shadow:inset 0 calc(1px * -1) 0 #D3DAE6;;label:bottomBorder;;;;",
              "toString": [Function],
            }
          }
        />
        <div
          className="euiTabs euiTabs--medium euiTabs--bottomBorder emotion-euiTabs-tabSizeStyles-size_m-bottomBorder"
          onBlur={[Function]}
          onFocus={[Function]}
          role="tablist"
        >
          <EuiTab
            aria-controls="generated-id"
            id="es"
            isSelected={false}
            key="es"
            onClick={[Function]}
          >
            <button
              aria-controls="generated-id"
              aria-selected={false}
              css="unknown styles"
              disabled={false}
              id="es"
              onClick={[Function]}
              role="tab"
              type="button"
            >
              <Insertion
                cache={
                  Object {
                    "insert": [Function],
                    "inserted": Object {
                      "1cduqyw-euiTab-selected": true,
                      "fv3x4g-euiTab": true,
                      "jdrvl0-euiTabs-tabSizeStyles-size_m-bottomBorder": true,
                      "zcjv1n-euiTabs-tabSizeStyles-size_s-bottomBorder": true,
                    },
                    "key": "css",
                    "nonce": undefined,
                    "registered": Object {},
                    "sheet": StyleSheet {
                      "_alreadyInsertedOrderInsensitiveRule": true,
                      "_insertTag": [Function],
                      "before": null,
                      "container": <head>
                        <style
                          data-emotion="css"
                          data-s=""
                        >
                          
                          .emotion-euiTabs-tabSizeStyles-size_m-bottomBorder{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;max-inline-size:100%;overflow-x:auto;overflow-inline:auto;overflow-y:hidden;overflow-block:hidden;position:relative;-webkit-flex-shrink:0;-ms-flex-negative:0;flex-shrink:0;gap:16px;box-shadow:inset 0 calc(1px * -1) 0 #D3DAE6;}
                        </style>
                        <style
                          data-emotion="css"
                          data-s=""
                        >
                          
                          .emotion-euiTabs-tabSizeStyles-size_m-bottomBorder .euiTab{padding:0 4px;}
                        </style>
                        <style
                          data-emotion="css"
                          data-s=""
                        >
                          
                          .emotion-euiTabs-tabSizeStyles-size_m-bottomBorder .euiTab__content{font-size:1.0000rem;line-height:1.4286rem;font-weight:700;color:#1a1c21;line-height:40px;}
                        </style>
                        <style
                          data-emotion="css"
                          data-s=""
                        >
                          
                          .emotion-euiTab-selected{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;cursor:pointer;-webkit-flex-direction:row;-ms-flex-direction:row;flex-direction:row;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;font-weight:600;gap:8px;box-shadow:inset 0 calc(2px * -1) 0 #07C;}
                        </style>
                        <style
                          data-emotion="css"
                          data-s=""
                        >
                          
                          .emotion-euiTab-selected:focus{background-color:transparent;outline-offset:-2px;}
                        </style>
                        <style
                          data-emotion="css"
                          data-s=""
                        >
                          
                          .emotion-euiTab-selected .euiTab__content{color:#343741;}
                        </style>
                        <style
                          data-emotion="css"
                          data-s=""
                        >
                          
                          .emotion-euiTab-selected .euiTab__content:hover{-webkit-text-decoration:underline;text-decoration:underline;}
                        </style>
                        <style
                          data-emotion="css"
                          data-s=""
                        >
                          
                          .emotion-euiTab-selected .euiTab__content{color:#006bb8;}
                        </style>
                        <style
                          data-emotion="css"
                          data-s=""
                        >
                          
                          .emotion-euiTab{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;cursor:pointer;-webkit-flex-direction:row;-ms-flex-direction:row;flex-direction:row;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;font-weight:600;gap:8px;}
                        </style>
                        <style
                          data-emotion="css"
                          data-s=""
                        >
                          
                          .emotion-euiTab:focus{background-color:transparent;outline-offset:-2px;}
                        </style>
                        <style
                          data-emotion="css"
                          data-s=""
                        >
                          
                          .emotion-euiTab .euiTab__content{color:#343741;}
                        </style>
                        <style
                          data-emotion="css"
                          data-s=""
                        >
                          
                          .emotion-euiTab .euiTab__content:hover{-webkit-text-decoration:underline;text-decoration:underline;}
                        </style>
                        <style
                          data-emotion="css"
                          data-s=""
                        >
                          
                          .css-zcjv1n-euiTabs-tabSizeStyles-size_s-bottomBorder{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;max-inline-size:100%;overflow-x:auto;overflow-inline:auto;overflow-y:hidden;overflow-block:hidden;position:relative;-webkit-flex-shrink:0;-ms-flex-negative:0;flex-shrink:0;gap:12px;box-shadow:inset 0 calc(1px * -1) 0 #D3DAE6;}
                        </style>
                        <style
                          data-emotion="css"
                          data-s=""
                        >
                          
                          .css-zcjv1n-euiTabs-tabSizeStyles-size_s-bottomBorder .euiTab{padding:0 4px;}
                        </style>
                        <style
                          data-emotion="css"
                          data-s=""
                        >
                          
                          .css-zcjv1n-euiTabs-tabSizeStyles-size_s-bottomBorder .euiTab__content{font-size:0.8571rem;line-height:1.1429rem;font-weight:700;color:#1a1c21;line-height:32px;}
                        </style>
                      </head>,
                      "ctr": 15,
                      "insertionPoint": undefined,
                      "isSpeedy": false,
                      "key": "css",
                      "nonce": undefined,
                      "prepend": undefined,
                      "tags": Array [
                        <style
                          data-emotion="css"
                          data-s=""
                        >
                          
                          .emotion-euiTabs-tabSizeStyles-size_m-bottomBorder{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;max-inline-size:100%;overflow-x:auto;overflow-inline:auto;overflow-y:hidden;overflow-block:hidden;position:relative;-webkit-flex-shrink:0;-ms-flex-negative:0;flex-shrink:0;gap:16px;box-shadow:inset 0 calc(1px * -1) 0 #D3DAE6;}
                        </style>,
                        <style
                          data-emotion="css"
                          data-s=""
                        >
                          
                          .emotion-euiTabs-tabSizeStyles-size_m-bottomBorder .euiTab{padding:0 4px;}
                        </style>,
                        <style
                          data-emotion="css"
                          data-s=""
                        >
                          
                          .emotion-euiTabs-tabSizeStyles-size_m-bottomBorder .euiTab__content{font-size:1.0000rem;line-height:1.4286rem;font-weight:700;color:#1a1c21;line-height:40px;}
                        </style>,
                        <style
                          data-emotion="css"
                          data-s=""
                        >
                          
                          .emotion-euiTab-selected{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;cursor:pointer;-webkit-flex-direction:row;-ms-flex-direction:row;flex-direction:row;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;font-weight:600;gap:8px;box-shadow:inset 0 calc(2px * -1) 0 #07C;}
                        </style>,
                        <style
                          data-emotion="css"
                          data-s=""
                        >
                          
                          .emotion-euiTab-selected:focus{background-color:transparent;outline-offset:-2px;}
                        </style>,
                        <style
                          data-emotion="css"
                          data-s=""
                        >
                          
                          .emotion-euiTab-selected .euiTab__content{color:#343741;}
                        </style>,
                        <style
                          data-emotion="css"
                          data-s=""
                        >
                          
                          .emotion-euiTab-selected .euiTab__content:hover{-webkit-text-decoration:underline;text-decoration:underline;}
                        </style>,
                        <style
                          data-emotion="css"
                          data-s=""
                        >
                          
                          .emotion-euiTab-selected .euiTab__content{color:#006bb8;}
                        </style>,
                        <style
                          data-emotion="css"
                          data-s=""
                        >
                          
                          .emotion-euiTab{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;cursor:pointer;-webkit-flex-direction:row;-ms-flex-direction:row;flex-direction:row;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;font-weight:600;gap:8px;}
                        </style>,
                        <style
                          data-emotion="css"
                          data-s=""
                        >
                          
                          .emotion-euiTab:focus{background-color:transparent;outline-offset:-2px;}
                        </style>,
                        <style
                          data-emotion="css"
                          data-s=""
                        >
                          
                          .emotion-euiTab .euiTab__content{color:#343741;}
                        </style>,
                        <style
                          data-emotion="css"
                          data-s=""
                        >
                          
                          .emotion-euiTab .euiTab__content:hover{-webkit-text-decoration:underline;text-decoration:underline;}
                        </style>,
                        <style
                          data-emotion="css"
                          data-s=""
                        >
                          
                          .css-zcjv1n-euiTabs-tabSizeStyles-size_s-bottomBorder{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;max-inline-size:100%;overflow-x:auto;overflow-inline:auto;overflow-y:hidden;overflow-block:hidden;position:relative;-webkit-flex-shrink:0;-ms-flex-negative:0;flex-shrink:0;gap:12px;box-shadow:inset 0 calc(1px * -1) 0 #D3DAE6;}
                        </style>,
                        <style
                          data-emotion="css"
                          data-s=""
                        >
                          
                          .css-zcjv1n-euiTabs-tabSizeStyles-size_s-bottomBorder .euiTab{padding:0 4px;}
                        </style>,
                        <style
                          data-emotion="css"
                          data-s=""
                        >
                          
                          .css-zcjv1n-euiTabs-tabSizeStyles-size_s-bottomBorder .euiTab__content{font-size:0.8571rem;line-height:1.1429rem;font-weight:700;color:#1a1c21;line-height:32px;}
                        </style>,
                      ],
                    },
                  }
                }
                isStringTag={true}
                serialized={
                  Object {
                    "map": undefined,
                    "name": "fv3x4g-euiTab",
                    "next": undefined,
                    "styles": "display:flex;cursor:pointer;flex-direction:row;align-items:center;font-weight:600;gap:8px;&:focus{background-color:transparent;outline-offset:-2px;}.euiTab__content{color:#343741;&:hover{text-decoration:underline;}};label:euiTab;;;;;",
                    "toString": [Function],
                  }
                }
              />
              <button
                aria-controls="generated-id"
                aria-selected={false}
                className="euiTab emotion-euiTab"
                disabled={false}
                id="es"
                onClick={[Function]}
                role="tab"
                type="button"
              >
                <span
                  className="euiTab__content"
                >
                  Elasticsearch
                </span>
              </button>
            </button>
          </EuiTab>
          <EuiTab
            append="append"
            aria-controls="generated-id"
            className="kibanaTab"
            data-test-subj="kibanaTab"
            id="kibana"
            isSelected={true}
            key="kibana"
            onClick={[Function]}
            prepend="prepend"
          >
            <button
              aria-controls="generated-id"
              aria-selected={true}
              css="unknown styles"
              data-test-subj="kibanaTab"
              disabled={false}
              id="kibana"
              onClick={[Function]}
              role="tab"
              type="button"
            >
              <Insertion
                cache={
                  Object {
                    "insert": [Function],
                    "inserted": Object {
                      "1cduqyw-euiTab-selected": true,
                      "fv3x4g-euiTab": true,
                      "jdrvl0-euiTabs-tabSizeStyles-size_m-bottomBorder": true,
                      "zcjv1n-euiTabs-tabSizeStyles-size_s-bottomBorder": true,
                    },
                    "key": "css",
                    "nonce": undefined,
                    "registered": Object {},
                    "sheet": StyleSheet {
                      "_alreadyInsertedOrderInsensitiveRule": true,
                      "_insertTag": [Function],
                      "before": null,
                      "container": <head>
                        <style
                          data-emotion="css"
                          data-s=""
                        >
                          
                          .emotion-euiTabs-tabSizeStyles-size_m-bottomBorder{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;max-inline-size:100%;overflow-x:auto;overflow-inline:auto;overflow-y:hidden;overflow-block:hidden;position:relative;-webkit-flex-shrink:0;-ms-flex-negative:0;flex-shrink:0;gap:16px;box-shadow:inset 0 calc(1px * -1) 0 #D3DAE6;}
                        </style>
                        <style
                          data-emotion="css"
                          data-s=""
                        >
                          
                          .emotion-euiTabs-tabSizeStyles-size_m-bottomBorder .euiTab{padding:0 4px;}
                        </style>
                        <style
                          data-emotion="css"
                          data-s=""
                        >
                          
                          .emotion-euiTabs-tabSizeStyles-size_m-bottomBorder .euiTab__content{font-size:1.0000rem;line-height:1.4286rem;font-weight:700;color:#1a1c21;line-height:40px;}
                        </style>
                        <style
                          data-emotion="css"
                          data-s=""
                        >
                          
                          .emotion-euiTab-selected{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;cursor:pointer;-webkit-flex-direction:row;-ms-flex-direction:row;flex-direction:row;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;font-weight:600;gap:8px;box-shadow:inset 0 calc(2px * -1) 0 #07C;}
                        </style>
                        <style
                          data-emotion="css"
                          data-s=""
                        >
                          
                          .emotion-euiTab-selected:focus{background-color:transparent;outline-offset:-2px;}
                        </style>
                        <style
                          data-emotion="css"
                          data-s=""
                        >
                          
                          .emotion-euiTab-selected .euiTab__content{color:#343741;}
                        </style>
                        <style
                          data-emotion="css"
                          data-s=""
                        >
                          
                          .emotion-euiTab-selected .euiTab__content:hover{-webkit-text-decoration:underline;text-decoration:underline;}
                        </style>
                        <style
                          data-emotion="css"
                          data-s=""
                        >
                          
                          .emotion-euiTab-selected .euiTab__content{color:#006bb8;}
                        </style>
                        <style
                          data-emotion="css"
                          data-s=""
                        >
                          
                          .emotion-euiTab{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;cursor:pointer;-webkit-flex-direction:row;-ms-flex-direction:row;flex-direction:row;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;font-weight:600;gap:8px;}
                        </style>
                        <style
                          data-emotion="css"
                          data-s=""
                        >
                          
                          .emotion-euiTab:focus{background-color:transparent;outline-offset:-2px;}
                        </style>
                        <style
                          data-emotion="css"
                          data-s=""
                        >
                          
                          .emotion-euiTab .euiTab__content{color:#343741;}
                        </style>
                        <style
                          data-emotion="css"
                          data-s=""
                        >
                          
                          .emotion-euiTab .euiTab__content:hover{-webkit-text-decoration:underline;text-decoration:underline;}
                        </style>
                        <style
                          data-emotion="css"
                          data-s=""
                        >
                          
                          .css-zcjv1n-euiTabs-tabSizeStyles-size_s-bottomBorder{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;max-inline-size:100%;overflow-x:auto;overflow-inline:auto;overflow-y:hidden;overflow-block:hidden;position:relative;-webkit-flex-shrink:0;-ms-flex-negative:0;flex-shrink:0;gap:12px;box-shadow:inset 0 calc(1px * -1) 0 #D3DAE6;}
                        </style>
                        <style
                          data-emotion="css"
                          data-s=""
                        >
                          
                          .css-zcjv1n-euiTabs-tabSizeStyles-size_s-bottomBorder .euiTab{padding:0 4px;}
                        </style>
                        <style
                          data-emotion="css"
                          data-s=""
                        >
                          
                          .css-zcjv1n-euiTabs-tabSizeStyles-size_s-bottomBorder .euiTab__content{font-size:0.8571rem;line-height:1.1429rem;font-weight:700;color:#1a1c21;line-height:32px;}
                        </style>
                      </head>,
                      "ctr": 15,
                      "insertionPoint": undefined,
                      "isSpeedy": false,
                      "key": "css",
                      "nonce": undefined,
                      "prepend": undefined,
                      "tags": Array [
                        <style
                          data-emotion="css"
                          data-s=""
                        >
                          
                          .emotion-euiTabs-tabSizeStyles-size_m-bottomBorder{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;max-inline-size:100%;overflow-x:auto;overflow-inline:auto;overflow-y:hidden;overflow-block:hidden;position:relative;-webkit-flex-shrink:0;-ms-flex-negative:0;flex-shrink:0;gap:16px;box-shadow:inset 0 calc(1px * -1) 0 #D3DAE6;}
                        </style>,
                        <style
                          data-emotion="css"
                          data-s=""
                        >
                          
                          .emotion-euiTabs-tabSizeStyles-size_m-bottomBorder .euiTab{padding:0 4px;}
                        </style>,
                        <style
                          data-emotion="css"
                          data-s=""
                        >
                          
                          .emotion-euiTabs-tabSizeStyles-size_m-bottomBorder .euiTab__content{font-size:1.0000rem;line-height:1.4286rem;font-weight:700;color:#1a1c21;line-height:40px;}
                        </style>,
                        <style
                          data-emotion="css"
                          data-s=""
                        >
                          
                          .emotion-euiTab-selected{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;cursor:pointer;-webkit-flex-direction:row;-ms-flex-direction:row;flex-direction:row;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;font-weight:600;gap:8px;box-shadow:inset 0 calc(2px * -1) 0 #07C;}
                        </style>,
                        <style
                          data-emotion="css"
                          data-s=""
                        >
                          
                          .emotion-euiTab-selected:focus{background-color:transparent;outline-offset:-2px;}
                        </style>,
                        <style
                          data-emotion="css"
                          data-s=""
                        >
                          
                          .emotion-euiTab-selected .euiTab__content{color:#343741;}
                        </style>,
                        <style
                          data-emotion="css"
                          data-s=""
                        >
                          
                          .emotion-euiTab-selected .euiTab__content:hover{-webkit-text-decoration:underline;text-decoration:underline;}
                        </style>,
                        <style
                          data-emotion="css"
                          data-s=""
                        >
                          
                          .emotion-euiTab-selected .euiTab__content{color:#006bb8;}
                        </style>,
                        <style
                          data-emotion="css"
                          data-s=""
                        >
                          
                          .emotion-euiTab{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;cursor:pointer;-webkit-flex-direction:row;-ms-flex-direction:row;flex-direction:row;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;font-weight:600;gap:8px;}
                        </style>,
                        <style
                          data-emotion="css"
                          data-s=""
                        >
                          
                          .emotion-euiTab:focus{background-color:transparent;outline-offset:-2px;}
                        </style>,
                        <style
                          data-emotion="css"
                          data-s=""
                        >
                          
                          .emotion-euiTab .euiTab__content{color:#343741;}
                        </style>,
                        <style
                          data-emotion="css"
                          data-s=""
                        >
                          
                          .emotion-euiTab .euiTab__content:hover{-webkit-text-decoration:underline;text-decoration:underline;}
                        </style>,
                        <style
                          data-emotion="css"
                          data-s=""
                        >
                          
                          .css-zcjv1n-euiTabs-tabSizeStyles-size_s-bottomBorder{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;max-inline-size:100%;overflow-x:auto;overflow-inline:auto;overflow-y:hidden;overflow-block:hidden;position:relative;-webkit-flex-shrink:0;-ms-flex-negative:0;flex-shrink:0;gap:12px;box-shadow:inset 0 calc(1px * -1) 0 #D3DAE6;}
                        </style>,
                        <style
                          data-emotion="css"
                          data-s=""
                        >
                          
                          .css-zcjv1n-euiTabs-tabSizeStyles-size_s-bottomBorder .euiTab{padding:0 4px;}
                        </style>,
                        <style
                          data-emotion="css"
                          data-s=""
                        >
                          
                          .css-zcjv1n-euiTabs-tabSizeStyles-size_s-bottomBorder .euiTab__content{font-size:0.8571rem;line-height:1.1429rem;font-weight:700;color:#1a1c21;line-height:32px;}
                        </style>,
                      ],
                    },
                  }
                }
                isStringTag={true}
                serialized={
                  Object {
                    "map": undefined,
                    "name": "1cduqyw-euiTab-selected",
                    "next": undefined,
                    "styles": "display:flex;cursor:pointer;flex-direction:row;align-items:center;font-weight:600;gap:8px;&:focus{background-color:transparent;outline-offset:-2px;}.euiTab__content{color:#343741;&:hover{text-decoration:underline;}};label:euiTab;;;box-shadow:inset 0 calc(2px * -1) 0 #07C;.euiTab__content{color:#006bb8;};label:selected;;;;",
                    "toString": [Function],
                  }
                }
              />
              <button
                aria-controls="generated-id"
                aria-selected={true}
                className="euiTab kibanaTab euiTab-isSelected emotion-euiTab-selected"
                data-test-subj="kibanaTab"
                disabled={false}
                id="kibana"
                onClick={[Function]}
                role="tab"
                type="button"
              >
                <span
                  className="euiTab__prepend"
                >
                  prepend
                </span>
                <span
                  className="euiTab__content"
                >
                  <strong>
                    Kibana
                  </strong>
                </span>
                <span
                  className="euiTab__append"
                >
                  append
                </span>
              </button>
            </button>
          </EuiTab>
        </div>
      </div>
    </EuiTabs>
    <div
      aria-labelledby="kibana"
      id="generated-id"
      role="tabpanel"
    >
      <p>
        updated Kibana content
      </p>
    </div>
  </div>
</EuiTabbedContent>
`;

exports[`EuiTabbedContent is rendered with required props and tabs 1`] = `
<div
  aria-label="aria-label"
  class="testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="euiTabs euiTabs--medium euiTabs--bottomBorder emotion-euiTabs-tabSizeStyles-size_m-bottomBorder"
    role="tablist"
  >
    <button
      aria-controls="generated-id"
      aria-selected="true"
      class="euiTab euiTab-isSelected emotion-euiTab-selected"
      id="es"
      role="tab"
      type="button"
    >
      <span
        class="euiTab__content"
      >
        Elasticsearch
      </span>
    </button>
    <button
      aria-controls="generated-id"
      aria-selected="false"
      class="euiTab kibanaTab emotion-euiTab"
      data-test-subj="kibanaTab"
      id="kibana"
      role="tab"
      type="button"
    >
      <span
        class="euiTab__prepend"
      >
        prepend
      </span>
      <span
        class="euiTab__content"
      >
        <strong>
          Kibana
        </strong>
      </span>
      <span
        class="euiTab__append"
      >
        append
      </span>
    </button>
  </div>
  <div
    aria-labelledby="es"
    id="generated-id"
    role="tabpanel"
  >
    <p>
      Elasticsearch content
    </p>
  </div>
</div>
`;

exports[`EuiTabbedContent props autoFocus initial is rendered 1`] = `
<div>
  <div
    class="euiTabs euiTabs--medium euiTabs--bottomBorder emotion-euiTabs-tabSizeStyles-size_m-bottomBorder"
    role="tablist"
  >
    <button
      aria-controls="generated-id"
      aria-selected="true"
      class="euiTab euiTab-isSelected emotion-euiTab-selected"
      id="es"
      role="tab"
      type="button"
    >
      <span
        class="euiTab__content"
      >
        Elasticsearch
      </span>
    </button>
    <button
      aria-controls="generated-id"
      aria-selected="false"
      class="euiTab kibanaTab emotion-euiTab"
      data-test-subj="kibanaTab"
      id="kibana"
      role="tab"
      type="button"
    >
      <span
        class="euiTab__prepend"
      >
        prepend
      </span>
      <span
        class="euiTab__content"
      >
        <strong>
          Kibana
        </strong>
      </span>
      <span
        class="euiTab__append"
      >
        append
      </span>
    </button>
  </div>
  <div
    aria-labelledby="es"
    id="generated-id"
    role="tabpanel"
  >
    <p>
      Elasticsearch content
    </p>
  </div>
</div>
`;

exports[`EuiTabbedContent props autoFocus selected is rendered 1`] = `
<div>
  <div
    class="euiTabs euiTabs--medium euiTabs--bottomBorder emotion-euiTabs-tabSizeStyles-size_m-bottomBorder"
    role="tablist"
  >
    <button
      aria-controls="generated-id"
      aria-selected="true"
      class="euiTab euiTab-isSelected emotion-euiTab-selected"
      id="es"
      role="tab"
      type="button"
    >
      <span
        class="euiTab__content"
      >
        Elasticsearch
      </span>
    </button>
    <button
      aria-controls="generated-id"
      aria-selected="false"
      class="euiTab kibanaTab emotion-euiTab"
      data-test-subj="kibanaTab"
      id="kibana"
      role="tab"
      type="button"
    >
      <span
        class="euiTab__prepend"
      >
        prepend
      </span>
      <span
        class="euiTab__content"
      >
        <strong>
          Kibana
        </strong>
      </span>
      <span
        class="euiTab__append"
      >
        append
      </span>
    </button>
  </div>
  <div
    aria-labelledby="es"
    id="generated-id"
    role="tabpanel"
  >
    <p>
      Elasticsearch content
    </p>
  </div>
</div>
`;

exports[`EuiTabbedContent props initialSelectedTab renders a selected tab 1`] = `
<div>
  <div
    class="euiTabs euiTabs--medium euiTabs--bottomBorder emotion-euiTabs-tabSizeStyles-size_m-bottomBorder"
    role="tablist"
  >
    <button
      aria-controls="generated-id"
      aria-selected="false"
      class="euiTab emotion-euiTab"
      id="es"
      role="tab"
      type="button"
    >
      <span
        class="euiTab__content"
      >
        Elasticsearch
      </span>
    </button>
    <button
      aria-controls="generated-id"
      aria-selected="true"
      class="euiTab kibanaTab euiTab-isSelected emotion-euiTab-selected"
      data-test-subj="kibanaTab"
      id="kibana"
      role="tab"
      type="button"
    >
      <span
        class="euiTab__prepend"
      >
        prepend
      </span>
      <span
        class="euiTab__content"
      >
        <strong>
          Kibana
        </strong>
      </span>
      <span
        class="euiTab__append"
      >
        append
      </span>
    </button>
  </div>
  <div
    aria-labelledby="kibana"
    id="generated-id"
    role="tabpanel"
  >
    <p>
      Kibana content
    </p>
  </div>
</div>
`;

exports[`EuiTabbedContent props selectedTab renders a selected tab 1`] = `
<div>
  <div
    class="euiTabs euiTabs--medium euiTabs--bottomBorder emotion-euiTabs-tabSizeStyles-size_m-bottomBorder"
    role="tablist"
  >
    <button
      aria-controls="generated-id"
      aria-selected="false"
      class="euiTab emotion-euiTab"
      id="es"
      role="tab"
      type="button"
    >
      <span
        class="euiTab__content"
      >
        Elasticsearch
      </span>
    </button>
    <button
      aria-controls="generated-id"
      aria-selected="true"
      class="euiTab kibanaTab euiTab-isSelected emotion-euiTab-selected"
      data-test-subj="kibanaTab"
      id="kibana"
      role="tab"
      type="button"
    >
      <span
        class="euiTab__prepend"
      >
        prepend
      </span>
      <span
        class="euiTab__content"
      >
        <strong>
          Kibana
        </strong>
      </span>
      <span
        class="euiTab__append"
      >
        append
      </span>
    </button>
  </div>
  <div
    aria-labelledby="kibana"
    id="generated-id"
    role="tabpanel"
  >
    <p>
      Kibana content
    </p>
  </div>
</div>
`;

exports[`EuiTabbedContent props size can be small 1`] = `
<div>
  <div
    class="euiTabs euiTabs--small euiTabs--bottomBorder emotion-euiTabs-tabSizeStyles-size_s-bottomBorder"
    role="tablist"
  >
    <button
      aria-controls="generated-id"
      aria-selected="true"
      class="euiTab euiTab-isSelected emotion-euiTab-selected"
      id="es"
      role="tab"
      type="button"
    >
      <span
        class="euiTab__content"
      >
        Elasticsearch
      </span>
    </button>
    <button
      aria-controls="generated-id"
      aria-selected="false"
      class="euiTab kibanaTab emotion-euiTab"
      data-test-subj="kibanaTab"
      id="kibana"
      role="tab"
      type="button"
    >
      <span
        class="euiTab__prepend"
      >
        prepend
      </span>
      <span
        class="euiTab__content"
      >
        <strong>
          Kibana
        </strong>
      </span>
      <span
        class="euiTab__append"
      >
        append
      </span>
    </button>
  </div>
  <div
    aria-labelledby="es"
    id="generated-id"
    role="tabpanel"
  >
    <p>
      Elasticsearch content
    </p>
  </div>
</div>
`;
